--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,4 +25,8 @@ jobs:
       with:
         java-version: ${{matrix.java}}    
     - uses: actions/checkout@v2
-   
+    - uses: actions/cache@v2
+      with:
+        path: ~/.gradle/caches
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+        restore-keys: ${{ runner.os }}-gradle-   
