--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 Thumbs.db
 .DS_Store
+.gradle
 build/
 out/
+bin/
 .idea
 *.iml
 *.ipr
@@ -9,4 +11,3 @@ out/
 .project
 .settings
 .classpath
-info.txt
