--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,15 @@
+import com.bmuschko.gradle.docker.tasks.image.Dockerfile
+import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
 
+/**
+ * grails docker. https://guides.grails.org/grails-as-docker-container/guide/index.html
+ * github.  https://www.youtube.com/watch?v=R8_veQiYBjI
+ * Deploy to dockerhub. https://www.youtube.com/watch?v=EIHY_CY5J0k
+ *
+ * maven.  https://mvnrepository.com/artifact/com.bmuschko/gradle-docker-plugin
+ * implementation 'com.bmuschko:gradle-docker-plugin:6.7.0'
+ *
+ */
 buildscript {
     repositories {
         maven { url "https://repo.grails.org/grails/core" }
@@ -8,7 +19,7 @@ buildscript {
         classpath "org.grails.plugins:hibernate5:7.0.5"
         classpath "gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.0"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.2.4"
-
+        classpath 'com.bmuschko:gradle-docker-plugin:6.0.0' 
     }
 }
 
@@ -17,11 +28,12 @@ group "deploytodocker"
 
 apply plugin:"eclipse"
 apply plugin:"idea"
-//apply plugin:"war"
+// apply plugin:"war"
 apply plugin:"org.grails.grails-web"
 apply plugin:"com.github.erdi.webdriver-binaries"
 apply plugin:"com.bertramlabs.asset-pipeline"
 apply plugin:"org.grails.grails-gsp"
+apply plugin:"com.bmuschko.docker-remote-api"
 
 repositories {
     maven { url "https://repo.grails.org/grails/core" }
@@ -74,9 +86,6 @@ dependencies {
     testCompile "org.seleniumhq.selenium:selenium-support:3.14.0"
     testRuntime "org.seleniumhq.selenium:selenium-chrome-driver:3.14.0"
     testRuntime "org.seleniumhq.selenium:selenium-firefox-driver:3.14.0"
-
-    // https://mvnrepository.com/artifact/com.bmuschko/gradle-docker-plugin
-    implementation 'com.bmuschko:gradle-docker-plugin:6.7.0'
 }
 
 bootRun {
@@ -113,4 +122,44 @@ tasks.withType(Test) {
 assets {
     minifyJs = true
     minifyCss = true
+}
+
+
+ext {
+    dockerTag = "grails-sample/${project.name}:${project.version}".toLowerCase() 
+    dockerBuildDir = mkdir("${buildDir}/docker") 
+}
+task prepareDocker(type: Copy, dependsOn: assemble) { 
+    description = 'Copy files from src/main/docker and application jar to Docker temporal build directory'
+    group = 'Docker'
+
+    from 'src/main/docker'
+    from project.jar
+
+    into dockerBuildDir
+}
+task createDockerfile(type: Dockerfile, dependsOn: prepareDocker) { 
+    description = 'Create a Dockerfile file'
+    group = 'Docker'
+
+    destFile = project.file("${dockerBuildDir}/Dockerfile")
+
+    from 'openjdk:8u151-jdk-alpine'
+
+    exposePort 8080
+
+    workingDir '/app'
+
+    copyFile jar.archiveName, 'application.jar'
+    copyFile 'app-entrypoint.sh', 'app-entrypoint.sh' 
+    runCommand 'chmod +x app-entrypoint.sh'
+
+    entryPoint '/app/app-entrypoint.sh' 
+}
+task buildImage(type: DockerBuildImage, dependsOn: createDockerfile) { 
+    description = 'Create Docker image to run the Grails application'
+    group = 'Docker'
+
+    inputDir = file(dockerBuildDir)
+    images.add(dockerTag)
 }
