--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,19 @@ import com.bmuschko.gradle.docker.tasks.image.Dockerfile
 import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
 
 /**
- * grails docker. https://guides.grails.org/grails-as-docker-container/guide/index.html
- * github.  https://www.youtube.com/watch?v=R8_veQiYBjI
- * Deploy to dockerhub. https://www.youtube.com/watch?v=EIHY_CY5J0k
+ * grails docker : https://guides.grails.org/grails-as-docker-container/guide/index.html
+ * github :  https://www.youtube.com/watch?v=R8_veQiYBjI
+ * Deploy to dockerhub : https://www.youtube.com/watch?v=EIHY_CY5J0k
+ * Deploy to Okteto : https://okteto.com/blog/develop-and-deploy-a-grails-application-in-okteto-cloud/
  *
- * maven.  https://mvnrepository.com/artifact/com.bmuschko/gradle-docker-plugin
+ * maven :  https://mvnrepository.com/artifact/com.bmuschko/gradle-docker-plugin
  * implementation 'com.bmuschko:gradle-docker-plugin:6.7.0'
  *
  */
 buildscript {
     repositories {
+        gradlePluginPortal()
+        mavenLocal()
         maven { url "https://repo.grails.org/grails/core" }
     }
     dependencies {
@@ -19,7 +22,7 @@ buildscript {
         classpath "org.grails.plugins:hibernate5:7.0.5"
         classpath "gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.0"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.2.4"
-        classpath 'com.bmuschko:gradle-docker-plugin:6.0.0' 
+        classpath 'com.bmuschko:gradle-docker-plugin:6.0.0'
     }
 }
 
@@ -86,6 +89,7 @@ dependencies {
     testCompile "org.seleniumhq.selenium:selenium-support:3.14.0"
     testRuntime "org.seleniumhq.selenium:selenium-chrome-driver:3.14.0"
     testRuntime "org.seleniumhq.selenium:selenium-firefox-driver:3.14.0"
+
 }
 
 bootRun {
